internal/xds/translator/testdata/out/xds-ir/ratelimit-merge-hostnames.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-2/http-app1
  virtualHosts:
  - domains:
    - app1.gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-2
            namespace: envoy-gateway
            sectionName: http-app1
    name: envoy-gateway/gateway-2/http-app1/app1_gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            policies:
            - kind: BackendTrafficPolicy
              name: policy-for-route
              namespace: default
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/app1_gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: envoy-gateway/gateway-2/http-app1
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: httproute/default/httproute-1/rule/0/match/0/app1_gateway_envoyproxy_io
                descriptorValue: httproute/default/httproute-1/rule/0/match/0/app1_gateway_envoyproxy_io
            - genericKey:
                descriptorKey: default/policy-for-route/rule/0
                descriptorValue: default/policy-for-route/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-path
                descriptorValue: rule-0-path
                expectMatch: true
                headers:
                - name: :path
                  stringMatch:
                    prefix: /
            - remoteAddressMatch:
                addressMatcher:
                  ranges:
                  - addressPrefix: 192.168.0.0
                    prefixLen: 16
                descriptorKey: masked_remote_address
                descriptorValue: 192.168.0.0/16
            - remoteAddressMatch:
                addressMatcher:
                  ranges:
                  - addressPrefix: 192.168.0.0
                    prefixLen: 16
                descriptorKey: remote_address
                descriptorValue: '%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%'
  - domains:
    - app2.gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-2
            namespace: envoy-gateway
            sectionName: http-app2
    name: envoy-gateway/gateway-2/http-app2/app2_gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            policies:
            - kind: BackendTrafficPolicy
              name: policy-for-route
              namespace: default
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/app2_gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimitPerRoute
          domain: envoy-gateway/gateway-2/http-app2
          rateLimits:
          - actions:
            - genericKey:
                descriptorKey: httproute/default/httproute-1/rule/0/match/0/app2_gateway_envoyproxy_io
                descriptorValue: httproute/default/httproute-1/rule/0/match/0/app2_gateway_envoyproxy_io
            - genericKey:
                descriptorKey: default/policy-for-route/rule/0
                descriptorValue: default/policy-for-route/rule/0
            - headerValueMatch:
                descriptorKey: rule-0-path
                descriptorValue: rule-0-path
                expectMatch: true
                headers:
                - name: :path
                  stringMatch:
                    prefix: /
            - remoteAddressMatch:
                addressMatcher:
                  ranges:
                  - addressPrefix: 192.168.0.0
                    prefixLen: 16
                descriptorKey: masked_remote_address
                descriptorValue: 192.168.0.0/16
            - remoteAddressMatch:
                addressMatcher:
                  ranges:
                  - addressPrefix: 192.168.0.0
                    prefixLen: 16
                descriptorKey: remote_address
                descriptorValue: '%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%'
